scenarios/03-multi-listener/http-shared-port/31-backend-a-httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-a-route
  namespace: backend-a
  labels:
    app.kubernetes.io/part-of: demo
spec:
  parentRefs:
    - name: http-shared-port-gateway
      namespace: gateway-system
      sectionName: http-a
  hostnames:
    - api-a.example.test
  rules:
    - backendRefs:
        - name: api
          port: 80
